# provision-ble

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setupenv.sh
src/: main.cpp
src/adv/: advertisement.cpp  advertisement.hpp
src/dbus/: bluez_client.cpp  bluez_client.hpp
src/gatt/: characteristic.cpp  characteristic.hpp  command.cpp  command.hpp  device_info.cpp  device_info.hpp  object_manager.cpp  object_manager.hpp  service.cpp  service.hpp  state.cpp  state.hpp
src/util/: log.cpp  log.hpp
src/wifi/: connect.cpp  connect.hpp  ip_monitor.cpp  ip_monitor.hpp  scan.cpp  scan.hpp  wifi_state_dispatcher.cpp  wifi_state_dispatcher.hpp
systemd/: README.md  provision-ble.service
